--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -3,7 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nsxsof363/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.18】欧美病例激增 但死亡人数少</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1210329499-600x400.jpg" />
-<h6>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。( DAMIEN MEYER/AFP via Getty Images)
+<h6>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。(DAMIEN MEYER/AFP via Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2020年10月18日讯】（大纪元记者夏雨、戴芙若、林南、颜殊璟、萧律生综合报导）10月18日全球<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
@@ -28,21 +28,21 @@
 <p><a name="_Toc2020101815"></a></p>
 <h3>欧美病例激增 但死亡人数少</h3>
 <p>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。</p>
-<p>纽时报导，部分原因可能是更广泛的测试。密歇根大学的流行病学家乔恩·泽尔纳（Jon Zelner）说，许多其他病例很可能是在没有症状或轻度疾病的年轻人中发现的，这些病例以前可能没有被发现。他在接受采访时说，这就是密歇根州现在正在发生的事情。</p>
+<p>《纽时》报导，部分原因可能是更广泛地测试。密歇根大学的流行病学家乔恩·泽尔纳（Jon Zelner）说，许多其它病例很可能是在没有症状或轻度疾病的年轻人中发现的，这些病例以前可能没有被发现。他在接受采访时说，这就是密歇根州现在正在发生的事情。</p>
 <p>但是他说，这也可能只是时间问题。他说，现在发生的死亡案例大都是30至40天前患病的人。预计当前病例的增加将反映在11月死亡人数的增加上。</p>
 <p>在欧洲国家和美国各州，单日和每周记录新病例的增加，越来越普遍。</p>
 <p>在美国，过去14天的平均每日报告病例增加了28%，住院人数也在增加，而死亡人数仅增加了1%。</p>
 <p>俄亥俄州，印第安纳州，北达科他州，伊利诺伊州，新墨西哥州，怀俄明州，科罗拉多州，南达科他州，肯塔基州，西维吉尼亚州和爱达荷州本周报告的病例数均超过了之前的7天。明尼苏达州也是如此，尽管由于计算机更新，该州周六未报告新病例。</p>
 <p>这些州中只有一个州——北达科他州——是八个报告死亡人数相对于其人口最高的州。</p>
-<p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其他城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
+<p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其它城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
 <p>据卫生部称，波兰也达到了新的高度，周六有9,622例新感染，84例相关死亡。乌克兰已将封锁延长至今年年底，据其国家安全和国防委员会称，乌克兰周六分别记录了6,410例新感染和109例死亡。</p>
 <p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，COVID-19现在是第五大死亡原因，每天的死亡人数已经达到了1000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
 <p><a name="_Toc2020101814"></a></p>
 <h3>推特删白宫顾问“口罩无用论”推文</h3>
 <p>推特（Twitter）从白宫中共病毒高级顾问斯科特·阿特拉斯博士（Dr. Scott Atlas）那里删除了一条推文，该推文质疑口罩在对抗COVID-19方面的有效性。</p>
-<p>阿特拉斯在推文中写道：“口罩是否有效？否”，在其他几篇之前，有人质疑使用口罩防止中共病毒扩散。阿特拉斯还举了一些例子，他曾说过“即使强制戴口罩，案例也爆发了”，包括洛杉矶，迈阿密，夏威夷，阿拉巴马州，法国，菲律宾，英国，西班牙和以色列。</p>
+<p>阿特拉斯在推文中写道：“口罩是否有效？否”，在其它几篇之前，有人质疑使用口罩防止中共病毒扩散。阿特拉斯还举了一些例子，他曾说过“即使强制戴口罩，案例也爆发了”，包括洛杉矶，迈阿密，夏威夷，阿拉巴马州，法国，菲律宾，英国，西班牙和以色列。</p>
 <p>Twitter在给《国会山报》的一份声明中说，该医生的推文“违反了我们的COVID-19误导性信息政策”，“禁止共享与COVID-19相关的虚假或误导性内容，否则可能会造成伤害。”</p>
-<p>白宫中共病毒顾问在删除推文后回击Twitter，说：“这意味着正确的政策是@realDonaldTrump准则：将口罩用于其预定目的——当与其他人接近时，尤其是在高风险中，否则保持社交距离。没有广泛的授权。“常识”，阿特拉斯写道。</p>
+<p>白宫中共病毒顾问在删除推文后回击Twitter，说：“这意味着正确的政策是@realDonaldTrump准则：将口罩用于其预定目的——当与其他人接近时，尤其是在高风险中，否则保持社交距离。没有广泛地授权。“常识”，阿特拉斯写道。</p>
 <p><a name="_Toc2020101813"></a></p>
 <h3>WHO：欧洲某些地区的重症监护病房近满员</h3>
 <p>世界卫生组织说，欧洲的中共病毒爆发是“令人担忧的”，因为病例激增，某些地区的重症监护病房（ICU）床位已接近饱和。</p>
@@ -53,7 +53,7 @@
 <p>针对最新刺激协议的谈判，众议院议长南希·佩洛西（Nancy Pelosi）周日在致民主党同事的一封信中说：“尽管有一些令人鼓舞的消息，但仍有很多工作要做。”</p>
 <p>周日早些时候，她表示需要在48小时内与政府达成协议，才能在选举日之前通过法案。她的办公室说时间表将在星期二晚上结束。</p>
 <p>她继续说：“我们希望找到共同点。”她写道，“我对我们可以在选举前达成协议感到乐观。为此，我们在谈判优先事项时正在书写下来，以便我们一旦达成协议就已做好充分的准备。”</p>
-<h3>伊利诺伊州报告4,000余新增病例</h3>
+<h3>伊利诺伊州报告四千余新增病例</h3>
 <p>伊利诺伊州公共卫生部周日报告了4,245例新的COVID-19病例，22例死亡。</p>
 <p>该州的初步7天平均测试阳性率为5.3%。截至昨晚，已有2,012人因COVID-19住院，其中包括408名ICU患者和157名呼吸机患者。</p>
 <p>伊利诺伊州迄今已报告344,048例中共病毒病例，总计9,214例死亡。</p>
@@ -83,9 +83,9 @@
 <h3>爱尔兰宣布周一将实施全国性措施</h3>
 <p>高等教育部长西蒙·哈里斯（Simon Harris）周日表示，爱尔兰将于周一在全国范围内引入“决定性”的COVID-19限制，但将停止重新引入今年早些时候实行的封锁类型。</p>
 <p>爱尔兰政府在两周前拒绝了卫生部长的建议，即COVID-19遏制的警报级别调升为最高水平的5级，而是收紧了各种地区性措施的限制。</p>
-<p>周六，爱尔兰在一周之内第四次刷新了单日新增病例数量，过去14天中每10万人的病例数量达到232，这是在由欧洲疾病预防控制中心提供的受监测的31个国家/地区中排名的第12位。</p>
+<p>周六，爱尔兰在一周之内第四次刷新了单日新增病例数量，过去14天中每10万人的病例数量达到232，这是在由欧洲疾病预防控制中心提供的受监测的31个国家／地区中排名的第12位。</p>
 <p>哈里斯对国家广播公司RTE说：“政府将在明天采取行动，这将是决定性的行动，这将是全国性的行动。”哈里斯在3月底至5月中旬担任卫生部长期间，爱尔兰是欧洲实施最严格封锁措施的国家之一。</p>
-<p>政府在周三将其与受COVID-19打击较重的北爱尔兰临界的三个郡提升为警报级别的第4级，并禁止家庭之间的拜访。其他23个县处于3级警报，禁止所有餐厅室内就餐。</p>
+<p>政府在周三将其与受COVID-19打击较重的北爱尔兰临界的三个郡提升为警报级别的第4级，并禁止家庭之间的拜访。其它23个县处于3级警报，禁止所有餐厅室内就餐。</p>
 <p>在第4级之下，只有基本零售才能开放。在5级以下，人们将被要求留在家中，餐馆只能提供外卖和送货服务。</p>
 <h3>英国记录逾16,000例新病例</h3>
 <p>英国周日又录得16,982人感染，较周六增加811人。</p>
@@ -94,8 +94,8 @@
 <h3>瑞士宣布全国口罩令</h3>
 <p>为遏制COVID-19扩散，瑞士周日宣布了一系列包括口罩令的措施，将于周一生效。</p>
 <p>根据政府的声明，瑞士联邦委员会采取了一些全国性的措施??，例如要求在公共场所可进入的室内区域戴口罩。</p>
-<p>自7月初以来，年龄在12岁以上的人必须在公共交通上戴口罩，但是新增的措施将要求在公共可到达的公共交通区域戴口罩，例如火车站（包括站台）、机场、公交车站和电车站。现在，在商店、邮局、银行、博物馆、图书馆、体育设施、餐厅和其它可公共访问的空间中，也需要口罩。</p>
-<p>在学校，高等教育机构和儿童保育设施中也需要口罩。</p>
+<p>自7月初以来，年龄在12岁以上的人必须在公共交通上戴口罩，但是新增的措施将要求在公共可到达的公共交通区域戴口罩，例如火车站（包括站台）、机场、公交车站和电车站。现在，在商店、邮局、银行、博物馆、图书馆、体育设施、餐厅和其它可公共访问的空间中，也需要戴口罩。</p>
+<p>在学校，高等教育机构和儿童保育设施中也需要戴口罩。</p>
 <p>政府还禁止在城镇广场、街道、小径和公园等公共场所自发举行超过15人的公共聚会。但是，如果采取预防措施，则可以有组织的户外活动，例如游行。对于超过15人的私人活动，只能在就坐时食用食物和饮料，任何站起来的人都必须戴口罩。对于私人活动，必须遵守卫生规则，并且必须记录与会人员的联系方式。</p>
 <p>政府指出：“最近几天冠状病毒（中共病毒）病例迅速增加，令人深感担忧。”<br />
 <a name="_Toc2020101810"></a></p>
@@ -106,10 +106,10 @@
 <p>该人的阳性测试使人们对83岁的教皇方济各和其他高级神职人员的健康状况感到担忧，就在几天前，梵蒂冈瑞士卫队的四名成员测试为阳性。</p>
 <p>布鲁尼在本周早些时候表示，这些警卫全都表现出症状，在他们的测试结果出来后，在梵蒂冈开始了一次接触者追踪行动。当时宣布，其他三名梵蒂冈居民最近几天也呈阳性。</p>
 <p>梵蒂冈城位于罗马市内，是罗马教皇的故乡和罗马天主教会的总部。</p>
-<p>意大利在10月9日报告了5,000多例新的中共病毒病例，这是自3月28日以来新的COVID-19病例的每日最高增幅。意大利部长理事会周三通过了一项法令，该法令要求在户外强制使用口罩，以期减慢病毒在全国的传播速度。</p>
+<p>意大利在10月9日报告了五千多例新的中共病毒病例，这是自3月28日以来新的COVID-19病例的每日最高增幅。意大利部长理事会周三通过了一项法令，该法令要求在户外强制使用口罩，以期减慢病毒在全国的传播速度。</p>
 <h3>每日新增病例减少 以色列放宽部分限制</h3>
 <p>以色列已经开始放宽上个月在该国第二次全面封锁期间施加的一些限制，因为每天的中共病毒病例数持续下降。</p>
-<p>根据卫生部的数据，以色列在星期四和星期五分别记录了1,608例新病例和1,469例新病例，阳性率约为4.2%。这些数字比几周前以色列第二波高峰期的新病例大幅下降，当时一天就记录了9000多例，阳性率远远超过10%。</p>
+<p>根据卫生部的数据，以色列在星期四和星期五分别记录了1,608例新病例和1,469例新病例，阳性率约为4.2%。这些数字比几周前以色列第二波高峰期的新病例大幅下降，当时一天就记录了九千多例，阳性率远远超过10%。</p>
 <p>作为放宽的限制措施的一部分，将允许公民离开他们的家超过1公里。天然公园和海滩将重新开放。餐厅将允许外卖而不是仅外送。更多的企业将重新开放。</p>
 <p>总理本杰明·内塔尼亚胡（Benjamin Netanyahu）表示，经济的重新开放将循序渐进。内塔尼亚胡在星期六晚上强调说：“遵守规则很重要。”</p>
 <p>以色列有许多感染率高的“红色城市”，它们不会重新开放，并且严格的限制将继续存在。</p>
@@ -127,7 +127,7 @@
 <h3>德国总统进行自我隔离</h3>
 <p>目前，德国总统弗兰克-瓦尔特·施泰因迈尔（Frank-Walter Steinmeier）的发言人说，总统的一名保安测试呈阳性后，总统正在自我隔离。</p>
 <p>10月17日，德国总理默克尔向公民发出紧急呼吁。她说德国目前处于“极为严峻”的疫情大流行阶段，病毒的传播速度“比半年多前开始时要快得多”。她呼吁民众大幅减少社交接触，避免疫情蔓延失控。</p>
-<p>德国疾控机构罗伯特·科赫研究所当天数据显示，德国新增确诊病例7,830例，创该国疫情暴发以来单日新增病例数新高，累计确诊356,387例。</p>
+<p>德国疾控机构罗伯特·科赫研究所当天数据显示，德国新增确诊病例7,830例，创该国疫情爆发以来单日新增病例数新高，累计确诊356,387例。</p>
 <h3>瑞典报告了首例第二次感染病例</h3>
 <p>10月16日，瑞典研究人员报告了该国首例二次感染病例。患者是一名53岁女性，第二次感染中共病毒后症状较轻。</p>
 <p>今年5月，这名女子首次被确诊感染中共病毒，经治疗后病毒检测结果转阴，然而在8月接受检测时结果再次为阳性。</p>
@@ -143,7 +143,7 @@
 <p>在本周内新增5起确诊病例之前，泰国最近一次确认新增本土病例发生在9月11日。截至目前，泰国总共确诊3686例、死亡59例。</p>
 <p>而目前，泰国民众正在进行抗议活动，该国国王和总理的权威以及传统统治精英的权威被挑战。</p>
 <h3>北京武汉预约接种中共病毒疫苗 引专家忧虑</h3>
-<p>中国国药集团已经在北京和武汉开放预约接种中共疫苗，并且宣布出国留学生优先，报名者2个星期后可以到指定地点接种。南华早报报导，到10月13日星期二为止，已经有十五万五千多人报名，七十六万多人表示有兴趣。</p>
+<p>中国国药集团已经在北京和武汉开放预约接种中共疫苗，并且宣布出国留学生优先，报名者2个星期后可以到指定地点接种。《南华早报》报导，到10月13日星期二为止，已经有十五万五千多人报名，七十六万多人表示有兴趣。</p>
 <p>美国之音报导，原沃尔特·里德陆军研究所病毒专家林晓旭说，国药集团这么做是不合理的，因为就算是非常成功的疫苗，在这样大疫情之下，也应该考虑哪些地区的疫情比较严重，哪些医疗机构人员更需要打疫苗，而不是让民众来哄抢。</p>
 <p>他指出，国药公司这么做实际上是为了配合他们公司的股票升值的问题，是一种炒作。</p>
 <p>随后又有报导说，国药集团的官网上撤掉了报名的通道。但国药并没有出面澄清这个消息。这种缺乏透明度的做法令人质疑。</p>
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256379.md#1" target="_blank">观雨堂主：历史并未忘记</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/19/n11396317.md#1" target="_blank">国防论坛基金会总裁：法轮功在反迫害最前线</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
