--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,23 +13,23 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484524.md#1" title="疫情期间 大陆“罚款经济”愈发严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/03/1103102129062320-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484560.md#1" title="以色列和阿联酋加强合作 达成投资双边协议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8RJ4QH-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nsxsof363.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485661.md#1">吁三退自救 圣荷西义工传递退党真相</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485726.md#1">法轮功车队华埠游行 穿梭闹市传真相</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环动力不足</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485661.md#1">吁三退自救 圣荷西义工传递退党真相</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485726.md#1">法轮功车队华埠游行 穿梭闹市传真相</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482198.md#1">【翻墙必看】习近平突然返京的原因</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481940.md#1">恐吓台湾 央视“移花接木”抛出5年前军演</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483050.md#1">丑闻再发酵 传拜登是电邮所指的“大人物”</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482193.md#1">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482193.md#1">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br>
 <br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/14/n12474852.md#1">【内幕】吉林省应对美中贸易战措施曝光</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,801,035 人
+!共 365,801,880 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -56,8 +56,8 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484974.md#1">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485506.md#1">【翻墙必看】拜登邮件门牵出另一民主党大佬</a><br>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482218.md#1">太平洋海战系列 史上最大规模航母对战</a><br>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483709.md#1">推特拒绝解封纽邮账户 要求删拜登丑闻报导</a><br>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
@@ -107,7 +107,7 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/6/n12458129.md#1">【独家】文件曝中共一带一路输出过剩产能</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12473848.md#1">晒与唐嫣贴头搂肩合照 佘诗曼直呼姐妹重逢</a><br>
 <br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nsxsof363/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484176.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484176.md#1">非法停发养老金 法轮功学员秦月玲被逼离家</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483233.md#1">长年遭迫害 吉林法轮功学员孙群英含冤离世</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12482046.md#1">入狱十年又被打残 访民马志文揭中共腐败</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482834.md#1">河南许昌市中级法院宋世旭等两法官被查</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/15/n12478438.md#1">有口皆碑的河北女教师朱素荣被冤判3年</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-846008282-1-320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484144.md#1">北京租房市场量价齐跌 租金达两年低位</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483899.md#1">深圳楼市分化 二手房成交量腰斩 新房被抢购</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/464704-320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485592.md#1">上任半年 中共国税总局稽查副局长林枫被查</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485477.md#1">中共外交官闯台外馆国庆酒会打伤人 台湾抗议</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484723.md#1">赵紫阳诞辰101周年 家属祭拜被监视</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484334.md#1">成都大学书记遗体告别式 校长未现身引关注</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484455.md#1">最高检检务督察局长落马 曾长期跟随秦光荣</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485812.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/1-21-320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485812.md#1">【视频】广州花都区狮岭镇一工厂发生大火</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485488.md#1">【视频】四川洪雅县路基塌陷 现巨大坑洞</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484378.md#1">【视频】20年罕见 江苏常熟成群毛蟹爬上岸</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484051.md#1">【视频】武昌天然气泄漏起火 旁边是加油站</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483388.md#1">药品回扣泛滥 大陆医疗暴利惊人</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482810.md#1">青岛染疫男载客231人 网民：乘客接触者呢？</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484047.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484047.md#1">南京三名城管当街暴打男子 围观群众怒斥</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483966.md#1">为买新款手机 浙江女子卖卵致肚胀如孕妇</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483901.md#1">陕西男子翻修房屋 发现榻榻米内塞满建筑垃圾</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483487.md#1">辽宁小学69人疑食物中毒 学生吃两天前饭菜</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483405.md#1">【视频】湖南派出所所长办案索要五千万被录音</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481229.md#1">钟南山又“带货”白云山A股涨停 网络炮轰</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12472161.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12472161.md#1">山西运城一中学39名学生食物中毒</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12471974.md#1">青岛中国海洋大学因化粪池事件登微博热搜</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/8/n12462789.md#1">出怪招帮邓紫棋打歌 邓超请网友用孤独造句</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/5/n12453374.md#1">河南大学文学院教授被指性骚扰女学生</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/3/n12450112.md#1">中共官媒又鼓吹被联合国删除的习语录</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/1/n12445814.md#1">摆脱小章子怡标签 童瑶出道18年一夜爆红</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484176.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484176.md#1">非法停发养老金 法轮功学员秦月玲被逼离家</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483233.md#1">长年遭迫害 吉林法轮功学员孙群英含冤离世</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12482046.md#1">入狱十年又被打残 访民马志文揭中共腐败</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482834.md#1">河南许昌市中级法院宋世旭等两法官被查</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/15/n12478438.md#1">有口皆碑的河北女教师朱素荣被冤判3年</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/15/n12478440.md#1">湖北十堰政府贪污低保 民众维权被关精神病院</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485268.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/4c1dbde474ee7b6c65f7cde6c1ae66e5-600x400-320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环动力不足</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484144.md#1">北京租房市场量价齐跌 租金达两年低位</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485592.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/3314-7-320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485592.md#1">上任半年 中共国税总局稽查副局长林枫被查</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485477.md#1">中共外交官闯台外馆国庆酒会打伤人 台湾抗议</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484723.md#1">赵紫阳诞辰101周年 家属祭拜被监视</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484334.md#1">成都大学书记遗体告别式 校长未现身引关注</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484455.md#1">最高检检务督察局长落马 曾长期跟随秦光荣</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484354.md#1">印媒专访台湾外长 谈敏感话题 中共跳脚</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485812.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/1-21-320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485812.md#1">【视频】广州花都区狮岭镇一工厂发生大火</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485488.md#1">【视频】四川洪雅县路基塌陷 现巨大坑洞</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484378.md#1">【视频】20年罕见 江苏常熟成群毛蟹爬上岸</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484051.md#1">【视频】武昌天然气泄漏起火 旁边是加油站</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483388.md#1">药品回扣泛滥 大陆医疗暴利惊人</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482810.md#1">青岛染疫男载客231人 网民：乘客接触者呢？</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484047.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484047.md#1">南京三名城管当街暴打男子 围观群众怒斥</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483966.md#1">为买新款手机 浙江女子卖卵致肚胀如孕妇</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483901.md#1">陕西男子翻修房屋 发现榻榻米内塞满建筑垃圾</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483487.md#1">辽宁小学69人疑食物中毒 学生吃两天前饭菜</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483405.md#1">【视频】湖南派出所所长办案索要五千万被录音</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481229.md#1">钟南山又“带货”白云山A股涨停 网络炮轰</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12472161.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12472161.md#1">山西运城一中学39名学生食物中毒</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/13/n12471974.md#1">青岛中国海洋大学因化粪池事件登微博热搜</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/8/n12462789.md#1">出怪招帮邓紫棋打歌 邓超请网友用孤独造句</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/5/n12453374.md#1">河南大学文学院教授被指性骚扰女学生</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/3/n12450112.md#1">中共官媒又鼓吹被联合国删除的习语录</a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/1/n12445814.md#1">摆脱小章子怡标签 童瑶出道18年一夜爆红</a><br><br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/12/n12471193.md#1">【独家】驻华使领馆被中共视为敌对势力</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/10/n12465951.md#1">【独家】密件泄中共预测秋冬疫情爆发情形</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/11/n12468712.md#1">【独家】南海上演伤亡演习 美中针锋相对</a><br>
